Completed the tests with 97% model line coverage and 100% method coverage