@@ -20,18 +20,18 @@ import static org.junit.Assert.*;
  * The methods related to the correctness of the field are tested by {@link PlayerTest}
  */
 public class PlayingFieldTest {
-    PlayingField playingField= new PlayingField();
+    PlayingField playingField = new PlayingField();
     List<Card> gold = Creation.getInstance().getGoldCards();
     List<Card> resource = Creation.getInstance().getResourceCards();
-    List<Card> objectives= Creation.getInstance().getObjectiveCards();
+    List<Card> objectives = Creation.getInstance().getObjectiveCards();
     /**
      * Used to help understand what id the colour of  the card that is being placed
      */
-    PlayableCard red ;
+    PlayableCard red;
     /**
      * Used to help understand what id the colour of  the card that is being placed
      */
-    PlayableCard green ;
+    PlayableCard green;
     /**
      * Used to help understand what id the colour of  the card that is being placed
      */
@@ -40,6 +40,7 @@ public class PlayingFieldTest {
      * Used to help understand what id the colour of  the card that is being placed
      */
     PlayableCard purple;
+
     public PlayingFieldTest() throws IOException {
 
     }
@@ -49,26 +50,26 @@ public class PlayingFieldTest {
      * Tests that a diagonal long 6 cards will be counted for 4 points.
      */
     @Test
-    public void testDoubleDiagonal()throws Exception{
-        StartingCard st= (StartingCard) Creation.getInstance().getStartingCards().getFirst();
-        st.placeCard(new Point(0,0),0,false);
-        red= (PlayableCard) resource.get(0);
-        red.placeCard(new Point(1,1),1,false);
+    public void testDoubleDiagonal() throws Exception {
+        StartingCard st = (StartingCard) Creation.getInstance().getStartingCards().getFirst();
+        st.placeCard(new Point(0, 0), 0, false);
+        red = (PlayableCard) resource.get(0);
+        red.placeCard(new Point(1, 1), 1, false);
         playingField.addPlacedCard(red);
-        red= (PlayableCard) resource.get(1);
-        red.placeCard(new Point(2,2),1,false);
+        red = (PlayableCard) resource.get(1);
+        red.placeCard(new Point(2, 2), 1, false);
         playingField.addPlacedCard(red);
-        red= (PlayableCard) resource.get(2);
-        red.placeCard(new Point(3,3),1,false);
+        red = (PlayableCard) resource.get(2);
+        red.placeCard(new Point(3, 3), 1, false);
         playingField.addPlacedCard(red);
-        red= (PlayableCard) resource.get(3);
-        red.placeCard(new Point(4,4),1,false);
+        red = (PlayableCard) resource.get(3);
+        red.placeCard(new Point(4, 4), 1, false);
         playingField.addPlacedCard(red);
-        red= (PlayableCard) resource.get(4);
-        red.placeCard(new Point(5,5),1,false);
+        red = (PlayableCard) resource.get(4);
+        red.placeCard(new Point(5, 5), 1, false);
         playingField.addPlacedCard(red);
-        red= (PlayableCard) resource.get(5);
-        red.placeCard(new Point(6,6),1,false);
+        red = (PlayableCard) resource.get(5);
+        red.placeCard(new Point(6, 6), 1, false);
         playingField.addPlacedCard(red);
         assertEquals(4, playingField.calculateObjectivePoints((ObjectiveCard) objectives.get(0)));
     }
@@ -79,8 +80,8 @@ public class PlayingFieldTest {
      * the diagonal objective must be scored only once for this setup<br><br>
      */
     @Test
-    public void testSingleDiagonal(){
-        try{
+    public void testSingleDiagonal() {
+        try {
             StartingCard st = (StartingCard) Creation.getInstance().getStartingCards().getFirst();
             st.placeCard(new Point(0, 0), 0, false);
             red = (PlayableCard) resource.get(0);
@@ -117,7 +118,7 @@ public class PlayingFieldTest {
             playingField.addPlacedCard(red);
 
             assertEquals(2, playingField.calculateObjectivePoints((ObjectiveCard) objectives.get(0)));
-        }catch (Exception e){
+        } catch (Exception e) {
             fail();
         }
     }
@@ -128,11 +129,11 @@ public class PlayingFieldTest {
      * it creates an ambiguous situation where an objective is counted once but can be counted in two ways<br><br>
      */
     @Test
-    public void ambiguousL_Shape(){
+    public void ambiguousL_Shape() {
         try {
             /*Sets up an ambiguous situation in which an L-shape objective can be counted only once but in two ways
-            * In this case it was used the objective that requires two red cards and a green card on the bottom left
-            * */
+             * In this case it was used the objective that requires two red cards and a green card on the bottom left
+             * */
 
             green = (PlayableCard) resource.get(10);
             green.placeCard(new Point(2, 4), 1, false);
@@ -159,7 +160,7 @@ public class PlayingFieldTest {
             playingField.addPlacedCard(red);
 
             assertEquals(3, playingField.calculateObjectivePoints((ObjectiveCard) objectives.get(4)));
-        }catch (Exception e){
+        } catch (Exception e) {
             fail();
         }
     }
@@ -168,7 +169,7 @@ public class PlayingFieldTest {
      * This test sets up a diagonal in an incorrect direction
      */
     @Test
-    public void incorrectDirectionDiagonal(){
+    public void incorrectDirectionDiagonal() {
         try {
 
             purple = (PlayableCard) resource.get(30);
@@ -181,7 +182,7 @@ public class PlayingFieldTest {
             purple.placeCard(new Point(-3, -3), 1, false);
             playingField.addPlacedCard(purple);
             assertEquals(0, playingField.calculateObjectivePoints((ObjectiveCard) objectives.get(3)));
-        }catch (Exception e){
+        } catch (Exception e) {
             fail();
         }
     }
@@ -190,15 +191,15 @@ public class PlayingFieldTest {
      * Tests that two L shapes of the same kind will be counted correctly, in the same column
      */
     @Test
-    public void twoL_shapes(){
+    public void twoL_shapes() {
         try {
             ObjectiveCard twoPurpleOneBlue = (ObjectiveCard) objectives.get(7);
             purple = (PlayableCard) resource.get(31);
-            assertThrows(NotPlacedException.class,()->
+            assertThrows(NotPlacedException.class, () ->
                     purple.isFacingUp()
             );
             purple.placeCard(new Point(1, 1), 1, false);
-            assertThrows(AlreadyPlacedException.class,()->
+            assertThrows(AlreadyPlacedException.class, () ->
                     purple.placeCard(new Point(1, 1), 1, false)
             );
             playingField.addPlacedCard(purple);
@@ -207,8 +208,8 @@ public class PlayingFieldTest {
             purple.placeCard(new Point(1, 3), 1, false);
             playingField.addPlacedCard(purple);
 
-            blue= (PlayableCard) resource.get(21);
-            blue.placeCard(new Point(0,4),1,false);
+            blue = (PlayableCard) resource.get(21);
+            blue.placeCard(new Point(0, 4), 1, false);
             playingField.addPlacedCard(blue);
 
             purple = (PlayableCard) resource.get(33);
@@ -219,12 +220,12 @@ public class PlayingFieldTest {
             purple.placeCard(new Point(1, 7), 1, false);
             playingField.addPlacedCard(purple);
 
-            blue= (PlayableCard) resource.get(22);
-            blue.placeCard(new Point(0,8),1,false);
+            blue = (PlayableCard) resource.get(22);
+            blue.placeCard(new Point(0, 8), 1, false);
             playingField.addPlacedCard(blue);
             System.out.println(playingField.getVisibleSymbols().toString());//displays that the cards' colours are counted correctly
-            assertEquals(6,playingField.calculateObjectivePoints(twoPurpleOneBlue));
-        }catch (Exception e){
+            assertEquals(6, playingField.calculateObjectivePoints(twoPurpleOneBlue));
+        } catch (Exception e) {
             fail();
         }
     }
